[package]
name = "civet"
version = "0.1.0"
authors = ["shisuimadara <adyityasingh@gmail.com>"] 
license = "MPL-2.0-no-copyleft-exception"
edition = "2021"
rust-version = "1.64.0"
description = "Join implementation in Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["cargo", "wrap_help"] }

[build-dependencies]
clap = { version = "4.0.18", features = ["cargo"] }
clap_generate = "3.0.3"
